Closed
Bug 308838
Opened 20 years ago
Closed 20 years ago
Win32 installer builds fail to launch at all after installation.
Categories
(SeaMonkey :: Installer, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
seamonkey1.0beta
People
(Reporter: stephend, Assigned: benjamin)
References
Details
(Keywords: regression, verified1.8)
Attachments
(2 files)
|
2.38 KB,
text/plain
|
Details | |
|
7.04 KB,
patch
|
darin.moz
:
review+
asa
:
approval1.8b5+
|
Details | Diff | Splinter Review |
Using today's Win32 installer builds, SeaMonkey fails to start after installation.
I suspect bug 299992.
My self-built SeaMonkey trunk Win32 opt builds and starts just fine, so this is
limited to the installer, which makes me think of this GRE change.
Steps to Reproduce:
1. Grab a seamonkey-1.1a.en-US.win32.installer.exe or
seamonkey-1.1a.en-US.win32.stub-installer.exe build from
ftp://ftp.mozilla.org/pub/mozilla.org/seamonkey/nightly/
2. Install, and wait for the app to launch.
Expected Results:
SeaMonkey should auto-launch itself after a successful installation.
Actual Results:
Nothing happens. Manually double-clicking the .exe doesn't work either.
i can start, install with the "-greLocal" command line.
# see bug 297725 comment 23, bug 301043 comment 11,13
*** Bug 308923 has been marked as a duplicate of this bug. ***
Comment 3•20 years ago
|
||
very annoying regression on win32.
Requesting blocking 1.0b
Flags: blocking-seamonkey1.0b?
Comment 4•20 years ago
|
||
didn't land on branch, remove blocking-request
sorry
Flags: blocking-seamonkey1.0b?
| Reporter | ||
Comment 5•20 years ago
|
||
*** Bug 309248 has been marked as a duplicate of this bug. ***
Comment 6•20 years ago
|
||
I've been experiencing this bug for about a week now. It's very annoying.
Comment 7•20 years ago
|
||
I've downloaded build 20050914 and had no problem. So the bug appeared somewhere
between 20050914 and 20050916.
I'm increasing severity to blocker since the whole application is unusable
because of this bug.
Severity: critical → blocker
| Reporter | ||
Comment 8•20 years ago
|
||
I hate this bug as much as anybody else does, but:
1. We're pretty sure bug 299992 caused this.
2. Benjamin's on vacation.
3. We have a workaround-See comment 1.
Comment 9•20 years ago
|
||
*** Bug 309485 has been marked as a duplicate of this bug. ***
Comment 10•20 years ago
|
||
*** Bug 309647 has been marked as a duplicate of this bug. ***
Comment 11•20 years ago
|
||
*** Bug 309858 has been marked as a duplicate of this bug. ***
Comment 12•20 years ago
|
||
*** Bug 309947 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•20 years ago
|
||
Can somebody take a look at the registry keys created by the installer in
HKLM/Software/mozilla.org/GRE and find the one created by the latest installers?
I want to know what GREHome is set to.
| Assignee | ||
Updated•20 years ago
|
Assignee: general → benjamin
Priority: -- → P2
Comment 14•20 years ago
|
||
(In reply to comment #13)
> Can somebody take a look at the registry keys created by the installer in
> HKLM/Software/mozilla.org/GRE and find the one created by the latest installers?
> I want to know what GREHome is set to.
GreHome = C:\Program Files\mozilla.org\SeaMonkey
Installed with "-greLocal" command line key.
Comment 15•20 years ago
|
||
Registry-Export from tinderbox-build (without -greLocal switch)
| Assignee | ||
Comment 16•20 years ago
|
||
Attachment #197562 -
Flags: review?(darin)
Comment 17•20 years ago
|
||
The last working nightly that's worked for me is 20050915. If I take the exe
from 2005091506 install and put it in the directory from the 2005091607 install,
everything works. If I replace all of the files that were changed with the older
version but leave the exe, it still doesn't run.
(The files that have changed are AccessibleMarshal.dll, gksvggdiplus.dll,
nsldap32v50.dll, nsldappr32v50.dll, nspr4.dll, nss3.dll, plc4.dll, plds4.dll,
regxpcom.exe, seamonkey.exe, smime3.dll, softokn3.chk, softokn3.dll, ssl3.dll,
xpicleanup.exe.)
Comment 18•20 years ago
|
||
Comment on attachment 197562 [details] [diff] [review]
Make all the APIs line up
>Index: xpcom/glue/standalone/nsGREDirServiceProvider.cpp
>+ const char *pGREDir = GRE_GetXPCOMPath();
...
>+ nsEmbedCString leaf;
>+ NS_CStringSetData(leaf, pGREDir);
nit: use C++ all the way, no?
nsEmbedCString leaf(pGREDir);
r=darin
Attachment #197562 -
Flags: review?(darin) → review+
| Assignee | ||
Comment 19•20 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 20•20 years ago
|
||
Comment on attachment 197562 [details] [diff] [review]
Make all the APIs line up
Needs to land with bug 299992 (neither will affect toolkit apps)
Attachment #197562 -
Flags: approval1.8b5?
Updated•20 years ago
|
Attachment #197562 -
Flags: approval1.8b5? → approval1.8b5+
| Reporter | ||
Comment 21•20 years ago
|
||
Verified FIXED with SeaMonkey 1.1a
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050930 Mozilla/1.0
seamonkey-1.1a.en-US.win32.stub-installer.exe 30-Sep-2005 13:40 225K
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Target Milestone: --- → Seamonkey1.0beta
Updated•20 years ago
|
Keywords: fixed1.8 → verified1.8
You need to log in
before you can comment on or make changes to this bug.
Description
•