Bug 308838 - Seamonkey win32 installer builds fail to launch after installation (GRE badness) r=darin